# markdown-knowledge-agent

./: .gitignore  README.md  config.yaml.example  main.py  memory_agent_documentation.tex  pyproject.toml  requirements.txt  run_api.sh
api/: main.py  models.py
api/static/: index.html  script.js  style.css
config/: __init__.py  settings.py
core/: __init__.py  agent.py
modules/: __init__.py  base.py  memory.py  planning.py  reflection.py  retrieval.py
tests/: test_markdown_tools.py  test_memory.py  test_tools.py
tools/: __init__.py  filesystem_tools.py  markdown_tools.py
utils/: __init__.py  logging.py
