[project]
name = "markdown-knowledge-agent"
version = "0.1.0"
description = "AI-powered Obsidian vault assistant with modular agentic architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Angela Saade" },
    { name = "Aurélien Daudin" },
    { name = "Baptiste Arnold" },
    { name = "Khaled Mili" }
]

dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "core", "modules", "tools", "utils"]

[dependency-groups]
dev = []
